Added Notable Section

--- a/index.html
+++ b/index.html
@@ -158,11 +158,25 @@
     </section>
     <!-- Slider End -->
     <!-- The Notable Team Members  start -->
+    <h3 class="notables-header">The Notable Team Members</h3>
+    <section class="notables">
+        <div class="notable">
+            <img src="Assets/Images/Notable/Baki.jpg" alt="Loading...">
+            <img src="Assets/Images/Notable/Frida.jpg" alt="Loading...">
+            <img src="Assets/Images/Notable/Nouran.jpg" alt="Loading...">
+            <img src="Assets/Images/Notable/Dyke.jpg" alt="Loading...">
+            <img src="Assets/Images/Notable/Raki.jpg" alt="Loading...">
+            <img src="Assets/Images/Notable/Ali.jpg" alt="Loading...">
+            <img src="Assets/Images/Notable/Awale.jpg" alt="Loading...">
+            <img src="Assets/Images/Notable/Ala.jpg" alt="Loading...">
+        </div>
+    </section>
 
     <!-- The Notable Team Members  End -->
     <!-- Notice & Youtube  start -->
     <section class="notice-youtube">
         <div class="notices">
+            <h1 class="notice-header">Notice Section</h1>
             <div class="notice">
                 <div class="date">
                     <h3 class="day">01st</h3>
