Added New Patners

--- a/patners.html
+++ b/patners.html
@@ -114,7 +114,27 @@
                 </div>
                 <div class="patner">
                     <img src="Assets/Images/Patners/HRL.jpg" alt="">
-                    <p class="patner-txt"> 	Hamdan's Research Lab, Syria</p>
+                    <p class="patner-txt">Hamdan's Research Lab, Syria</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/3s.png" alt="">
+                    <p class="patner-txt">3S Foundation, Dhaka, Bangladesh </p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/RIMS.png" alt="">
+                    <p class="patner-txt">Research Institute of Medicine and Surgery (RIMS), Lahore, Pakistan</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/WOH.jpg" alt="">
+                    <p class="patner-txt">Wellbeing Of Humanity- WOH, Dhaka, Bangladesh</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/BGUC.jpg" alt="">
+                    <p class="patner-txt">Bangladesh Girls Up Club, Dhaka, Bangladesh</p>
+                </div>
+                <div class="patner">
+                    <img src="Assets/Images/Patners/SDGs.jpg" alt="">
+                    <p class="patner-txt">Youth Action For Sustainable Development Goals</p>
                 </div>
 
             </div>
