--- a/webinar.html
+++ b/webinar.html
@@ -9,12 +9,41 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
         <!-- CSS Link -->
         <link rel="stylesheet" href="Styles/header.css">
-        <link rel="stylesheet" href="Styles/index.css">
+        <link rel="stylesheet" href="Styles/singelcareer.css">
         <link rel="stylesheet" href="Styles/footer.css">
 
-        <title>USD | Home</title>
-        <link rel="shortcut icon" type="image/png" href="Assets/Images/USD.png">
+        <title>USD | Career</title>
+        <link rel="shortcut icon" type="image/png" href="../Assets/Images/USD.png">
     </head>
+    <style>
+        .webinar {
+            height: 400px;
+            margin-top: 30px;            
+            text-align: center;
+        }
+        .webinar img{
+            height: 100%;
+            border-radius: 10px;
+        }
+        @media screen and (max-width: 600px){
+            .small-text{
+                font-size: 10px;
+            }
+        }
+        @media screen and (max-width: 480px) {
+            .webinar{
+                width: 100%;
+            }
+            .webinar img{
+                width: 100%;
+            }   
+        }
+        @media screen and (max-width: 380px){
+            .small-text{
+                font-size: 8px;
+            }
+        }
+    </style>
 
     <body>
         <!-- Nav Bar Start -->
@@ -96,117 +125,26 @@
             </nav>
         </div>
         <!-- Nav Bar End -->
-        <!-- Slider Start -->
-        <section class="slider">
-            <div class="slideshow">
+        <!-- Specafic Post Section Start -->
+        <section class="career-decriptions">
 
-                <div class="slides fade">
-                    <div class="slideNumber">1 / 7</div>
-                    <img src="Assets/Images/Slider/slider 1.jpg" alt="" style="width:100%">
-                    <!-- <div class="caption">Caption Text</div> -->
-                </div>
+            <h1 class="career-decriptions-title">An instrumental webinar on The ABC of Academic Writing</h1>
 
-                <div class="slides fade">
-                    <div class="slideNumber">2 / 7</div>
-                    <img src="Assets/Images/Slider/slider 2.jpg" alt="" style="width:100%">
-                    <!-- <div class="caption">Caption Two</div> -->
-                </div>
-
-                <div class="slides fade">
-                    <div class="slideNumber">3 / 7</div>
-                    <img src="Assets/Images/Slider/slider 3.jpg" alt="" style="width:100%">
-                    <!-- <div class="caption">Caption Three</div> -->
-                </div>
-
-                <div class="slides fade">
-                    <div class="slideNumber">4 / 7</div>
-                    <img src="Assets/Images/Slider/slider 4.jpg" alt="" style="width:100%">
-                    <!-- <div class="caption">Caption Four</div> -->
-                </div>
-
-                <div class="slides fade">
-                    <div class="slideNumber">5 / 7</div>
-                    <img src="Assets/Images/Slider/slider 5.jpg" alt="" style="width:100%">
-                    <!-- <div class="caption">Caption Five</div> -->
-                </div>
-
-                <div class="slides fade">
-                    <div class="slideNumber">6 / 7</div>
-                    <img src="Assets/Images/Slider/slider 6.jpg" alt="" style="width:100%">
-                    <!-- <div class="caption">Caption Five</div> -->
-                </div>
-
-                <div class="slides fade">
-                    <div class="slideNumber">7 / 7</div>
-                    <img src="Assets/Images/Slider/slider 7.jpg" alt="" style="width:100%">
-                    <!-- <div class="caption">Caption Five</div> -->
-                </div>
-
-                <!-- <a class="prev" onclick="plusSlides(-1)"><i class="fas fa-chevron-left"></i></a>
-            <a class="next" onclick="plusSlides(1)"><i class="fas fa-chevron-right"></i></a> -->
+            <div class="webinar">
+                <img src="Assets/Images/Webinar.jpg" alt="Loading...">
 
             </div>
-            <br>
+            <p class="career-decriptions-text">Be Creative! is going to be held on September 01, 2023. This webinar is
+                organized by the Center for Academic Writing of the University of Sustainable Development (USD). The
+                keynote speaker of this webinar is the Director of the Center, Prof. Dr. Gareth Dyke.</p>
+            <p class="career-decriptions-text small-text"><span style="font-weight: 900;">Zoom Link:</span> <a
+                    href="https://zoom.us/webinar/register/WN_jDXBD2VzQHGVEQ_mKOrfFw"
+                    target="_blank">https://zoom.us/webinar/register/WN_jDXBD2VzQHGVEQ_mKOrfFw</a></p>
 
-            <div style="text-align:center">
-                <span class="pointer" onclick="currentSlide(1)"></span>
-                <span class="pointer" onclick="currentSlide(2)"></span>
-                <span class="pointer" onclick="currentSlide(3)"></span>
-                <span class="pointer" onclick="currentSlide(4)"></span>
-                <span class="pointer" onclick="currentSlide(5)"></span>
-                <span class="pointer" onclick="currentSlide(6)"></span>
-                <span class="pointer" onclick="currentSlide(7)"></span>
-            </div>
+
+
         </section>
-        <!-- Slider End -->
-        <!-- The Notable Team Members  start -->
-        <h3 class="notables-header">The Notable Team Members</h3>
-        <section class="notables">
-            <div class="notable">
-                <img src="Assets/Images/Notable/Baki.jpg" alt="Loading...">
-                <img src="Assets/Images/Notable/Frida.jpg" alt="Loading...">
-                <img src="Assets/Images/Notable/Nouran.jpg" alt="Loading...">
-                <img src="Assets/Images/Notable/Dyke.jpg" alt="Loading...">
-                <img src="Assets/Images/Notable/Raki.jpg" alt="Loading...">
-                <img src="Assets/Images/Notable/Ali.jpg" alt="Loading...">
-                <img src="Assets/Images/Notable/Awale.jpg" alt="Loading...">
-                <img src="Assets/Images/Notable/Ala.jpg" alt="Loading...">
-            </div>
-        </section>
-
-        <!-- The Notable Team Members  End -->
-        <!-- Notice & Youtube  start -->
-        <section class="notice-youtube">
-            <div class="notices">
-                <h1 class="notice-header">Notice Section</h1>
-                <div class="notice">
-                    <div class="date">
-                        <h3 class="day">01st</h3>
-                        <h3 class="month">Sept</h3>
-                        <h3 class="year">2023</h3>
-                    </div>
-                    <a href="webinar.html" class="notice-title">An instrumental webinar on The ABC of Academic Writing
-                    </a>
-                </div>
-
-                <div class="notice">
-                    <div class="date">
-                        <h3 class="day">01st</h3>
-                        <h3 class="month">April</h3>
-                        <h3 class="year">2023</h3>
-                    </div>
-                    <a href="forIntern.html" class="notice-title">Internship Opportunity </a>
-                </div>
-
-            </div>
-            <div class="youtube">
-                <iframe class="youtube-video" src="https://www.youtube.com/embed/jkxj8GT9b2o"
-                    title="YouTube video player"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen></iframe>
-            </div>
-        </section>
-        <!-- Notice & Youtube  End -->
+        <!-- Specafic Post Section End -->
 
         <!-- FOOTER Start -->
         <footer class="footer">
@@ -267,7 +205,6 @@
 
         <!-- JS Link -->
         <script src="Js/header.js"></script>
-        <script src="Js/index.js"></script>
 
     </body>
 
